# VulcanOS-foundry-setup

./: .gitignore  .mcp.json  BACKUP-SUMMARY.md  CLAUDE.md  INSTALL-PROGRESS.md  MONITOR-CONFIG-IMPLEMENTATION.md  ORCHESTRATOR-READY.md  QUICKSTART-ORCHESTRATOR.md  START-HERE.md  VERSION  bindings-update.conf  boot.sh  converted_100w.txt  install.sh  kitty-zoom  kitty-zoom-test.sh  package-lock.json  pacman.conf  profiledef.sh
.claude/: hookify.iso-sync-reminder.local.md  hookify.stow-protection.local.md  settings.json
.orchestrator/: LAUNCH-PROMPT.md  QUICK-LAUNCH.txt  VULCAN-CONTROL-CENTER-IMPLEMENTATION.md  VULCANEDIT-PLAN.md  VULCANEDIT-PROMPT.md  pre-flight-checklist.md  speech-to-text-implementation.md  vulcanos-config-alignment.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v2.0-MILESTONE-AUDIT.md  v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md  v2.1-MILESTONE-AUDIT.md  v2.1-REQUIREMENTS.md  v2.1-ROADMAP.md
.planning/research/: APPSTATE.md  ARCHITECTURE.md  BINDINGMODE.md  FEATURES.md  MULTIPROFILE-ARCHITECTURE.md  PITFALLS-v3-nvidia.md  PITFALLS.md  STACK-v3-nvidia.md  STACK.md  SUMMARY.md  VALIDATION.md  (+1 more)
archiso/: packages.x86_64  packages.x86_64.full  pacman.conf  pacman.conf.full  profiledef.sh
branding/: BRAND-GUIDELINES.md  vulcan-palette.css
claude-project/: PROJECT-DESCRIPTION.txt  PROJECT-INSTRUCTIONS.md
docs/: BACKUP-RESTORE.md  BRANDING.md  DOCKER-MCP-GATEWAY-FIX.md  INSTALL.md  KEYBINDINGS.md  KITTY.md  LOCKSCREEN-DESIGN.md  MONITOR-CONFIG-FINAL.md  MONITOR-CONFIG-FIXED.md  MONITOR-DP-SWAPPING-FIX.md  MONITOR-PROFILE-WORKFLOW.md  MONITOR-SETUP.md  OPENCODE-MCP-CLEANUP.md  OPENCODE.md  PERMISSION_MODES.md  S2T-INSTALL.md  S2T-PLAN.md  S2T.md  TOUCHBAR-DAEMON.md  VULCAN-CONTROL-CENTER-PLAN.md  VULCAN-VAULT.md  VULCANBAR-PLAN.md  YOLO-MODE-FIX.md
dotfiles/: .stow-local-ignore
new-templates/: kitty.conf.tpl  starship.toml.tpl
scripts/: auto-backup-wrapper.sh  backup-vulcan-config.sh  build-foundry.sh  build-t2.sh  build.sh  patch-vulcan-glyph.py  prepare.sh  setup-foundry.sh  split-wallpaper.sh  test-iso.sh  test-s2t.sh  verify-backups.sh
vscode-vulcanos-theme/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  package.json
vulcan-appearance-manager/: Cargo.toml
vulcan-appearance-manager/resources/: vulcan-wallpaper-manager.desktop
vulcan-appearance-manager/src/: app.rs  brand_css.rs  main.rs  state.rs
vulcan-appearance-manager/src/components/: binding_dialog.rs  discovery_section.rs  mod.rs  monitor_layout.rs  profile_card.rs  profile_manager.rs  profile_view.rs  theme_browser.rs  theme_card.rs  theme_editor.rs  theme_view.rs  wallpaper_view.rs
vulcan-appearance-manager/src/models/: binding.rs  mod.rs  profile.rs
vulcan-appearance-manager/src/services/: app_discovery.rs  hyprctl.rs  hyprpaper.rs  mod.rs  profile_storage.rs  theme_css.rs  theme_parser.rs  theme_storage.rs  thumbnail.rs  wallpaper_backend.rs
vulcan-bar/: config.toml
vulcan-theme-manager/: Cargo.toml
vulcan-todo/: Cargo.toml  FINAL_STATUS.md  IMPLEMENTATION_PLAN.md  MCP_TEST_RESULTS.md  ORCHESTRATOR_PROMPT.md  README.md  SESSIONS_PROJECTS_PLAN.md  SESSION_IMPLEMENTATION.md  force-restart-opencode.sh  mcp-wrapper.sh  restart-opencode.sh  test-mcp.sh  test-tui.sh
vulcan-todo/data/: README.md
vulcan-todo/src/: cli.rs  main.rs
vulcan-todo/src/mcp/: mod.rs  protocol.rs  server.rs  server.rs.backup  tools.rs
vulcan-todo/src/models/: mod.rs  sprint.rs  task.rs
vulcan-todo/src/store/: json_store.rs  mod.rs
vulcan-todo/src/ui/: app.rs  mod.rs  tui.rs
vulcan-vault/: Cargo.toml  README.md  SESSION-PROMPTS.md
vulcan-vault/.claude/plugins/vulcan-vault/: .mcp.json  README.md
vulcan-vault/.claude/plugins/vulcan-vault/.claude-plugin/: plugin.json
vulcan-vault/.claude/plugins/vulcan-vault/agents/: vault-search.md
vulcan-vault/.claude/plugins/vulcan-vault/commands/: context.md  remember.md  task-context.md
vulcan-vault/.obsidian/: workspace.json
vulcan-vault/.prompts/: sprint-2-rag.md  sprint-3-integration.md  sprint-4-memory.md  sprint-5-plugin.md
vulcan-vault/docs/: ARCHITECTURE.md  MCP-TOOLS.md
vulcan-vault/src/: lib.rs  main.rs
vulcan-vault/src/mcp/: mod.rs  protocol.rs  server.rs  tools.rs
vulcan-vault/src/memory/: decay.rs  formation.rs  mod.rs  retrieval.rs
vulcan-vault/src/models/: chunk.rs  memory.rs  mod.rs  note.rs
vulcan-vault/src/rag/: chunker.rs  embeddings.rs  mod.rs
vulcan-vault/src/store/: error.rs  mod.rs  sqlite_store.rs
vulcan-vault/src/ui/: app.rs  mod.rs  tui.rs
vulcan-vault/tests/: rag_integration.rs
vulcan-wallpaper-manager/: Cargo.toml  TEST.md
vulcan-wallpaper-manager/src/: app.rs  main.rs
vulcan-wallpaper-manager/src/components/: mod.rs  monitor_layout.rs  profile_manager.rs  split_dialog.rs  wallpaper_picker.rs
vulcan-wallpaper-manager/src/models/: mod.rs  monitor.rs  wallpaper.rs
vulcan-wallpaper-manager/src/services/: hyprpaper.rs  image_splitter.rs  mod.rs  profile_storage.rs
vulcanbar/: Cargo.toml  README.md
vulcanbar/docs/: DEVELOPMENT-STATUS.md
vulcanbar/share/vulcanbar/: config-multipage.toml  vulcanbar.toml
vulcanbar/src/: main.rs
vulcanbar/src/config/: loader.rs  new_loader.rs  schema.rs
vulcanbar/src/display/: compositor.rs  fonts.rs
vulcanbar/src/events/: epoll.rs  mod.rs
vulcanbar/src/modules/: base.rs  battery.rs  brightness.rs  clock.rs  fkeys.rs  home.rs  media.rs  memory.rs  network.rs  tray.rs  window_title.rs
vulcanbar/src/pages/: mod.rs
vulcanbar/systemd/: vulcanbar.service
(+419 files in other folders)
