[package]
name = "vulcan-appearance-manager"
version = "0.1.0"
edition = "2021"
description = "VulcanOS unified appearance manager - themes and wallpapers"
authors = ["VulcanOS"]

[dependencies]
# GTK4 and Relm4
gtk4 = { version = "0.9", package = "gtk4", features = ["v4_16"] }
libadwaita = { version = "0.7", package = "libadwaita", features = ["v1_6"] }
relm4 = { version = "0.9", features = ["libadwaita"] }

# Image handling
image = "0.25"

# Data serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"

# Directory paths
dirs = "5"

# Async runtime
tokio = { version = "1", features = ["rt", "process"] }

# Regex for parsing theme files
regex = "1"

# Lazy statics
lazy_static = "1.4"

# Const string concatenation for CSS module
const_format = "0.2"

# Binary detection
which = "6"

# URL opening
open = "5"
