[package]
name = "vulcan-wallpaper-manager"
version = "0.1.0"
edition = "2021"
description = "VulcanOS multi-monitor wallpaper manager with GTK4/Adwaita"
authors = ["VulcanOS"]

[dependencies]
# GTK4 and Relm4
gtk4 = { version = "0.9", package = "gtk4", features = ["v4_16"] }
libadwaita = { version = "0.7", package = "libadwaita", features = ["v1_6"] }
relm4 = { version = "0.9", features = ["libadwaita"] }

# Image handling
image = "0.25"

# Data serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"

# Directory paths
dirs = "5"

# Async runtime
tokio = { version = "1", features = ["rt", "process"] }
