[package]
name = "vulcanbar"
version = "0.1.0"
edition = "2021"
license = "MIT AND Apache-2.0"
description = "Waybar-like Touch Bar daemon for T2 MacBooks"
repository = "https://github.com/VulcanOS/vulcanbar"

[dependencies]
# Display/Rendering (from tiny-dfr)
cairo-rs = { version = "0.20", default-features = false, features = ["freetype", "png"] }
librsvg-rebind = "0.1"
drm = "0.14"
freetype-rs = "0.37"

# Input handling (from tiny-dfr)
input = "0.8"
input-linux = { version = "0.7", features = ["serde"] }
input-linux-sys = "0.9"

# System (from tiny-dfr)
libc = "0.2"
nix = { version = "0.29", features = ["event", "signal", "inotify", "socket"] }
privdrop = "0.5.3"
udev = "0.9"

# Configuration
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Time/Date
chrono = { version = "0.4", features = ["unstable-locales"] }

# Utilities (from tiny-dfr)
anyhow = "1"
rand = "0.8"
freedesktop-icons = "0.4.0"

# New dependencies for VulcanBar
crossbeam-channel = "0.5"
libpulse-binding = "2.0"
hyprland = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
dbus = "0.9"  # For MPRIS media player integration

[build-dependencies]
pkg-config = "0.3"
